<resources>
    <string name="app_name">Salons8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_key">AIzaSyDWgrZi2N2RhGrYyBYeOBSzUQpZE3sVjYk</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reservation">Reservation</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="contactus">ContactUs</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="phone_req">Phone number is required</string>
    <string name="inv_phone">Invalid phone number</string>
    <string name="pass_req">Password is required</string>
    <string name="notification">Notifications</string>
    <string name="ok">Ok</string>
    <string name="si_su">Sign in or create a new account.</string>
    <string name="loging">Signing in ...</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="name_req">Name is required</string>
    <string name="email_req">Email is required</string>
    <string name="inv_email">Invalid email</string>
    <string name="country_req">Country is required</string>
    <string name="address_req">Address is required</string>
    <string name="city_req">City is required</string>
    <string name="img_req">Image is required</string>
    <string name="signng_up">SignUp...</string>
    <string name="ch_country">Choose country</string>
    <string name="ch_city">Choose city</string>
    <string name="no_salon">There are no salons to display</string>
    <string name="send">send</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="bank_accounts">Bank accounts</string>
    <string name="gmail">Gmail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="something">Error : Something went haywire try again later</string>
    <string name="wait">Wait...</string>
    <string name="sending">Sending...</string>
    <string name="account_name">Account name</string>
    <string name="account_IBAN">Account IBAN</string>
    <string name="account_bank_name">Bank</string>
    <string name="account_number">Account number</string>
    <string name="subject_req">Subject is required</string>
    <string name="msg_req">Message is required</string>
    <string name="send_succ">Send successfully</string>
    <string name="pls_install_wapp">Please install whatsapp.</string>
    <string name="update">Update</string>
    <string name="upd_name">Update name</string>
    <string name="upd_phone">Update phone</string>
    <string name="upd_email">Update email</string>
    <string name="upd_password">Update password</string>
    <string name="old_pass">Old password</string>
    <string name="newpass_req">New password is required</string>
    <string name="per_den">Permission denied</string>
    <string name="upd_address">Update address</string>
    <string name="close">Close</string>
    <string name="new_pass">New password</string>
    <string name="uptng_name">Updating name...</string>
    <string name="uptng_phone">Updating phone...</string>
    <string name="uptng_email">Updating email...</string>
    <string name="updtng_pass">Updating password...</string>
    <string name="uptng_address">Updating address...</string>
    <string name="rating">Rating</string>
    <string name="services">Services</string>
    <string name="location">Location</string>
    <string name="vote">Votes</string>
    <string name="in_salon">Salon</string>
    <string name="in_home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="sar">SAR</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">choose time</string>
    <string name="book">Book</string>
    <string name="curr_ord">Current orders</string>
    <string name="gps_will_open">App will open gps to fetch your location.</string>
    <string name="cnnot_open_gps">Cannot determined your location pls open gps</string>
    <string name="logng_out">Logging out...</string>
    <string name="em_ph_exist">Email or phone are exist</string>
    <string name="reset_password">Recover Password</string>
    <string name="recov_password_txt">Recover your account.We will send you a link to change your password</string>
    <string name="upd_img">Updating photo...</string>
    <string name="upd_succ">Updated successfully</string>
    <string name="wrong_oldpass">Incorrect old password</string>
    <string name="updng_city">Updating city...</string>
    <string name="upd_country">Updating country...</string>
    <string name="no_service">There are no services to display.</string>
    <string name="no_comm">There are no comments to display</string>
    <string name="total">Total</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="cart_contain">There are</string>
    <string name="item">item</string>
    <string name="do_del_item">Delete these item ?</string>
    <string name="no_order">No orders to display</string>
    <string name="booking">Booking...</string>
    <string name="booked_succ">Booking successfully</string>
    <string name="lod_cont_cit">Loading countries and cities...</string>
    <string name="no_reserv">No reservations to display</string>
    <string name="my_reserve">My reservations</string>
    <string name="details">Details</string>
    <string name="ph_pas_incorr">phone or password is incorrect</string>
    <string name="payment">payment</string>
    <string name="refuse_reserv">Reservation refused</string>
    <string name="accept_reserve">Reservation accepted , confirm reservation</string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="conf_reserve">Reservation confirmed successfully</string>
    <string name="transfer_amount">Tranfer amount</string>
    <string name="transfer_photo">Transfer photo</string>
    <string name="upload_image">Upload photo</string>
    <string name="amo_req">Transfer amount is required</string>
    <string name="sel_trans_img">Choose trasnfer photo</string>
    <string name="bokng">Booking...</string>
    <string name="rt">Rating</string>

</resources>
