<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@color/white"
    android:scrollbars="none"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"

        >
        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            />
        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/hint_color"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/edt_login_bg"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:singleLine="true"
            android:drawableStart="@drawable/phone_icon"
            android:drawablePadding="5dp"
            tools:ignore="RtlCompat"
            android:inputType="phone"
            android:textSize="14sp"
            />
        <com.lamudi.phonefield.PhoneInputLayout
            android:id="@+id/edt_check_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >

        </com.lamudi.phonefield.PhoneInputLayout>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/hint_color"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/edt_login_bg"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:singleLine="true"
            android:drawableStart="@drawable/pass_icon"
            android:drawablePadding="5dp"
            tools:ignore="RtlCompat"
            android:inputType="textPassword"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/icon_cart"
            android:textSize="15sp"
            android:text="@string/forget_password"
            />
        <Button
            android:id="@+id/btn_signin"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/sign_in"
            android:textAllCaps="true"

            />
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/btn_skip_bg"
            android:text="@string/create_new_account"
            android:textAllCaps="true"

            />
        <Button
            android:id="@+id/btn_skip"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/btn_skip_bg"
            android:text="@string/skip"
            android:textAllCaps="true"

            />
    </LinearLayout>

</ScrollView>