<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetRight="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/white_arrow"
                    android:layout_alignParentLeft="true"
                    android:padding="18dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:singleLine="true"
                    android:text="@string/reset_password"

                    />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@color/white"
    android:scrollbars="none"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"

        >
        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            android:text="@string/recov_password_txt"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/mail_icon"
                android:padding="6dp"
                android:layout_gravity="center_vertical"

                />
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/email_address"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                />
        </LinearLayout>


        <Button
            android:id="@+id/btn_send"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/btn_signup_bg"
            android:text="@string/send"
            android:textAllCaps="true"

            />

    </LinearLayout>

</ScrollView>

</LinearLayout>