<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/image_back"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:src="@drawable/back_arrow"
            android:layout_margin="5dp"
            android:padding="11dp"
            android:layout_gravity="left"

            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/icon_cart"
            android:src="@drawable/user_profile"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/user_icon"
                android:padding="6dp"
                android:layout_gravity="center_vertical"

                />
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:textSize="14sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/mail_icon"
                android:padding="6dp"
                android:layout_gravity="center_vertical"

                />
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/email_address"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_country"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"


            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/country"
                android:padding="6dp"
                android:layout_gravity="center_vertical"
                android:clickable="false"
                android:longClickable="false"
                />
            <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/ch_country"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="14sp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_city"

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/city_icon"
                android:padding="6dp"
                android:layout_gravity="center_vertical"
                android:clickable="false"
                android:longClickable="false"
                />
            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/ch_city"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="14sp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/address_icon"
                android:padding="6dp"
                android:layout_gravity="center_vertical"

                />
            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="text"
                android:textSize="14sp"
                />
        </LinearLayout>

        <com.lamudi.phonefield.PhoneInputLayout
            android:id="@+id/edt_check_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >

        </com.lamudi.phonefield.PhoneInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >

            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/call_icon"
                android:padding="6dp"
                android:layout_gravity="center_vertical"

                />
            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="phone"
                android:textSize="14sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_login_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >

            <ImageView
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:src="@drawable/lock"
                android:padding="6dp"
                android:layout_gravity="center_vertical"

                />
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hint_color"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="14sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/btn_signup_bg"
            android:text="@string/create_new_account"
            android:textAllCaps="true"

            />

    </LinearLayout>
</ScrollView>